# wavvy-ai-sdk

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/llm/: mod.rs  model_builder.rs  token_output.rs  token_output_stream.rs  wavvy_chat.rs  wavvy_chat_stream.rs
src/prompt_template/: chat_template.rs  message.rs  mod.rs  role.rs
