[package]
name = "wavvy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
mustache = { version = "0.9.0" }
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = { version = "1.0.116" }
tokenizers = { version = "0.21.0" }
anyhow = { version = "1.0.94" }
thiserror = { version = "2.0.8" }

[features]
metal = ["candle-core/metal", "candle-transformers/metal"]
