[package]
name = "wavvy-ai-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
mustache = { version = "0.9.0" }
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = { version = "1.0.116" }
tokenizers = { version = "0.21.0" }
anyhow = { version = "1.0.94" }
thiserror = { version = "2.0.8" }
futures = { version = "0.3.29" }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.27", features = ["derive"] }

[features]
metal = ["candle-core/metal", "candle-transformers/metal"]
